--- a/package.json
+++ b/package.json
@@ -10,23 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^22.2.0",
-    "@react-native-firebase/auth": "^22.2.0",
-    "@react-native-google-signin/google-signin": "^14.0.1",
+    "@react-native-community/blur": "^4.4.1",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/drawer": "^7.4.1",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
+    "@supabase/supabase-js": "^2.50.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-element-dropdown": "^2.12.4",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.24.3",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-pager-view": "^6.8.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
     "react-native-svg": "^15.12.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.14.1"
   },
