payment getway add

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
         android:launchMode="singleTask"
         android:windowSoftInputMode="adjustResize"
         android:exported="true">
+
+        <meta-data
+  android:name="com.google.android.geo.API_KEY"
+  android:value="AIzaSyC4wRzFdtEJiEABezAl-uxwYOMR4sLiUds" />
+
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
