--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-native-maps": "^1.24.3",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-pager-view": "^6.8.1",
+    "react-native-permissions": "^5.4.1",
+    "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
